one code snippet is ornery

--- a/index.html
+++ b/index.html
@@ -1795,7 +1795,7 @@ aside {
 <li>
 <p>Did it work?</p>
 <p>!
-$ eb --version
+eb --version
 This is EasyBuild 2.3.0 (framework: 2.3.0, easyblocks: 2.3.0) on host rhino-d.</p>
 </li>
 </ul></section>
