one code snippet is ornery

--- a/index.html
+++ b/index.html
@@ -1794,9 +1794,8 @@ aside {
 </li>
 <li>
 <p>Did it work?</p>
-<p>!
-eb --version
-This is EasyBuild 2.3.0 (framework: 2.3.0, easyblocks: 2.3.0) on host rhino-d.</p>
+<p><code>$ eb --version
+This is EasyBuild 2.3.0 (framework: 2.3.0, easyblocks: 2.3.0) on host rhino-d.</code></p>
 </li>
 </ul></section>
             
