helps to know markdown

--- a/index.html
+++ b/index.html
@@ -1792,13 +1792,10 @@ aside {
 </ul>
 <p><code>$ module load EasyBuild/2.3.0</code></p>
 <ul>
-<li>
-<p>Did it work?</p>
-<p>$ eb --version
-This is EasyBuild 2.3.0 (framework: 2.3.0, easyblocks: 2.3.0) on host rhino-d.
-$</p>
-</li>
-</ul></section>
+<li>Did it work?</li>
+</ul>
+<p><code>$ eb --version</code>
+<code>This is EasyBuild 2.3.0 (framework: 2.3.0, easyblocks: 2.3.0) on host rhino-d.</code></p></section>
             
           </div>
           <div class="presenter_notes">
